# Battle-Snek

./: CMakeLists.txt  readme.md  test_game.json
src/: common.hh  game.hh  main.cc  serialization.cc  serialization.hh  snake_ai.cc  snake_ai.hh
